--- a/Road to Recovery/pages/locationForm.html
+++ b/Road to Recovery/pages/locationForm.html
@@ -167,7 +167,7 @@
         <!-- Top Bar Start -->
         <div class="topbar">
             <!-- Navbar -->
-            <div class="navbar navbar-default" role="navigation">
+            <div id="na" class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="">
                         <!--Expend/Collaps Side Menue-->
@@ -423,6 +423,12 @@
         $(document).ready(function () {
 
             includeHTML();
+            if(window.location.hostname.toString()=='localhost' || window.location.pathname.indexOf('test')!=-1){
+                $("#na").css("background-color", "#ffde89");
+            }
+            if (window.location.href.indexOf('http://40.117.122.242/Road%20to%20Recovery/') != -1) {
+                window.location.href = "notAvailable.html";
+            }
             //datePicker();
             //generateCities();
             //generateVolTypes();
