--- a/Road to Recovery/pages/passwordForm.html
+++ b/Road to Recovery/pages/passwordForm.html
@@ -95,6 +95,12 @@
         $(document).ready(function () {
             
             includeHTML();
+            if (window.location.hostname.toString() == 'localhost' || window.location.pathname.indexOf('test') != -1) {
+                $("#na").css("background-color", "#ffde89");
+            }
+            if (window.location.href.indexOf('http://40.117.122.242/Road%20to%20Recovery/') != -1) {
+                window.location.href = "notAvailable.html";
+            }
             var userDisplayName = GENERAL.USER.getUserDisplayName();
             var userName = GENERAL.USER.getUserName();
             $("#userName").html(userDisplayName);
@@ -120,7 +126,7 @@
 
 
             <!-- Navbar -->
-            <div class="navbar navbar-default" role="navigation">
+            <div id="na" class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="">
                         <!--Expend/Collaps Side Menue-->
