--- a/Road to Recovery/pages/viewLocation.html
+++ b/Road to Recovery/pages/viewLocation.html
@@ -48,34 +48,30 @@
 
     <script>
         checkCookie();
+        var allLocationsFromDB=[];
         $(document).ready(function () {
 
             includeHTML();
+            if (window.location.hostname.toString() == 'localhost' || window.location.pathname.indexOf('test') != -1) {
+                $("#na").css("background-color", "#ffde89");
+            }
+            if (window.location.href.indexOf('http://40.117.122.242/Road%20to%20Recovery/') != -1) {
+                window.location.href = "notAvailable.html";
+            }
             var userName = GENERAL.USER.getUserDisplayName();
             $("#userName").html(userName);
-            //adds menu.html content into any "#menu" element
-            //$('#menu').load('menu.html');
-
-            //Create a DataTable from the Table
-            t = $('#datatable-buttons').DataTable({
-                columnDefs: [
-                    {
-                        targets: 5,
-                        className: 'dt-body-left'
-                    }
-                ]
-            });
-
+            
             refreshTable();
         });
 
 
         function refreshTable() {
+            allLocationsFromDB = [];
             $('#wait').show();
             checkCookie();
             var active = $("#activeCustomers").prop('checked');
 
-            t.clear().draw();
+            //t.clear().draw();
 
             $.ajax({
                 dataType: "json",
@@ -94,7 +90,7 @@
                         var editBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button>";
 
                         btnStr += /*showBtn + " " +*/ editBtn;
-
+                        var Location = {};
                         if (arr_Locations[i].IsActive == false) {
                             var reactiveBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo' ></i></button>";
                             btnStr += " " + reactiveBtn;
@@ -113,76 +109,56 @@
                             arr_Locations[i].ManagerLastName = "";
                         }
                         if (arr_Locations[i].ManagerName != "") {
-                            t.row.add([arr_Locations[i].Type, arr_Locations[i].Name, arr_Locations[i].Area,arr_Locations[i].ManagerName + " " + arr_Locations[i].ManagerLastName + ', ' + arr_Locations[i].ManagerPhones , arr_Locations[i].Remarks, btnStr]).draw(false);
+                            Location = {
+                                Type: arr_Locations[i].Type,
+                                Name: arr_Locations[i].Name,
+                                Area: arr_Locations[i].Area,
+                                ManagerDetials: arr_Locations[i].ManagerName + " " + arr_Locations[i].ManagerLastName + ', ' + arr_Locations[i].ManagerPhones,
+                                Remarks: arr_Locations[i].Remarks,
+                                Buttons: btnStr
+                            }
                         }
-                        else
-                            t.row.add([arr_Locations[i].Type, arr_Locations[i].Name, arr_Locations[i].Area,"" , arr_Locations[i].Remarks, btnStr]).draw(false);
-
+                        else {
+                            Location = {
+                                Type: arr_Locations[i].Type,
+                                Name: arr_Locations[i].Name,
+                                Area: arr_Locations[i].Area,
+                                ManagerDetials: "",
+                                Remarks: arr_Locations[i].Remarks,
+                                Buttons: btnStr
+                            }
+                        }
+                        allLocationsFromDB.push(Location);
                     }
 
-                    t.columns([1]).order('asc').draw();
-
-                    $('#datatable-buttons tbody').on('click', '#edit', function () {
-                        var data = t.row($(this).parents('tr')).data();
-                        arr_details = { displayName: data[1], func: "edit" };
-                        GENERAL.LOCATIONS.setLocationsList(JSON.stringify(arr_details));
-                        location.href = "locationForm.html";
+                    tbl = $('#datatable-buttons').DataTable({
+                        data: allLocationsFromDB,
+                        "autoWidth": false,
+                        "destroy": true,
+                        dom: 'Bfrtip',
+                        buttons: [
+                            {
+                                extend: 'excel',
+                                title: 'נקודות'
+                            }
+                        ],
+                        columnDefs: [
+                            {
+                                targets: 5,
+                                className: 'dt-body-right'
+                            }
+                        ],
+                        columns: [
+                            { data: "Type" },
+                            { data: "Name" },
+                            { data: "Area" },
+                            { data: "ManagerDetials" },
+                            { data: "Remarks" },
+                            { data: "Buttons" },
+                        ],
                     });
 
-                    $('#datatable-buttons tbody').on('click', '#show', function () {
-                        var data = t.row($(this).parents('tr')).data();
-                        arr_details = { displayName: data[1], func: "show" };
-                        GENERAL.LOCATIONS.setLocationsList(JSON.stringify(arr_details));
-                        location.href = "locationForm.html";
-                    });
-
-
-                    $('#datatable-buttons tbody').on('click', '#remove', function () {
-                        var data = t.row($(this).parents('tr')).data();
-                        swal({
-                            title: "האם אתם בטוחים?",
-                            type: "warning",
-                            text: "הפיכת האזור " + data[1]+" ללא פעיל",
-                            showCancelButton: true,
-                            cancelButtonText: "בטל",
-                            confirmButtonClass: 'btn-warning',
-                            confirmButtonText: "מחיקה",
-                            closeOnConfirm: false
-                        }, function () {
-                            deactivateLocation(data[1], 'false');
-                            swal({
-                                title: "האזור הפך ללא פעיל",
-                                timer: 1000,
-                                type: "success",
-                                showConfirmButton: false
-                            });
-                            setTimeout(function () { refreshTable() }, 1001);
-                        });
-                    });
-
-                    $('#datatable-buttons tbody').on('click', '#reactive', function () {
-                        var data = t.row($(this).parents('tr')).data();
-                        swal({
-                            title: "האם אתם בטוחים?",
-                            type: "warning",
-                            text: "שחזור האזור "+data[1],
-                            showCancelButton: true,
-                            cancelButtonText: "בטל",
-                            confirmButtonClass: 'btn-warning',
-                            confirmButtonText: "שחזר",
-                            closeOnConfirm: false
-                        }, function () {
-                            deactivateLocation(data[1], 'true');
-                            swal({
-                                title: "האזור הפך לפעיל",
-                                timer: 1000,
-                                type: "success",
-                                showConfirmButton: false
-                            });
-                            setTimeout(function () { refreshTable() }, 1001);
-                        });
-
-                    });
+                    buttonsEvents();
                 },
                 error: function (err) {
                     alert("Error in deactivateLocation: " + err.responseText);
@@ -190,7 +166,69 @@
                 }
             });
         }
+        function buttonsEvents(){
+            $('#datatable-buttons tbody').on('click', '#edit', function () {
+                var data = tbl.row($(this).parents('tr')).data();
+                arr_details = { displayName: data.Name, func: "edit" };
+                GENERAL.LOCATIONS.setLocationsList(JSON.stringify(arr_details));
+                location.href = "locationForm.html";
+            });
 
+            $('#datatable-buttons tbody').on('click', '#show', function () {
+                var data = tbl.row($(this).parents('tr')).data();
+                arr_details = { displayName: data.Name, func: "show" };
+                GENERAL.LOCATIONS.setLocationsList(JSON.stringify(arr_details));
+                location.href = "locationForm.html";
+            });
+
+
+            $('#datatable-buttons tbody').on('click', '#remove', function () {
+                var data = tbl.row($(this).parents('tr')).data();
+                swal({
+                    title: "האם אתם בטוחים?",
+                    type: "warning",
+                    text: "הפיכת האזור " + data.Name + " ללא פעיל",
+                    showCancelButton: true,
+                    cancelButtonText: "בטל",
+                    confirmButtonClass: 'btn-warning',
+                    confirmButtonText: "מחיקה",
+                    closeOnConfirm: false
+                }, function () {
+                    deactivateLocation(data.Name, 'false');
+                    swal({
+                        title: "האזור הפך ללא פעיל",
+                        timer: 1000,
+                        type: "success",
+                        showConfirmButton: false
+                    });
+                    setTimeout(function () { refreshTable() }, 1001);
+                });
+            });
+
+            $('#datatable-buttons tbody').on('click', '#reactive', function () {
+                var data = tbl.row($(this).parents('tr')).data();
+                swal({
+                    title: "האם אתם בטוחים?",
+                    type: "warning",
+                    text: "שחזור האזור " + data.Name,
+                    showCancelButton: true,
+                    cancelButtonText: "בטל",
+                    confirmButtonClass: 'btn-warning',
+                    confirmButtonText: "שחזר",
+                    closeOnConfirm: false
+                }, function () {
+                    deactivateLocation(data.Name, 'true');
+                    swal({
+                        title: "האזור הפך לפעיל",
+                        timer: 1000,
+                        type: "success",
+                        showConfirmButton: false
+                    });
+                    setTimeout(function () { refreshTable() }, 1001);
+                });
+
+            });
+        }
         //changed by sapir.
         function deactivateLocation(displayName, active) {
             checkCookie();
@@ -232,7 +270,7 @@
         <!-- Top Bar Start -->
         <div class="topbar">
             <!-- Navbar -->
-            <div class="navbar navbar-default" role="navigation">
+            <div id="na" class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="">
                         <!--Expend/Collaps Side Menue-->
