--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -267,7 +267,7 @@
                         {
                             if (date.getHours() < splitHour) //morning rides
                             {
-                                buildTables(tMorning);א
+                                buildTables(tMorning);
                             }
                             else //afternoon rides
                             {
@@ -624,12 +624,14 @@
 
         function deleteRidePat(RidePat, func) {
             checkCookie();
+            var numberOfRides= 1;
+            var repeatRide= "";
             $.ajax({
                 dataType: "json",
                 url: "WebService.asmx/setRidePat",
                 contentType: "application/json; charset=utf-8",
                 type: "POST",
-                data: JSON.stringify({ RidePat: RidePat, func: func, isAnonymous: isAnonymous }),
+                data: JSON.stringify({ RidePat: RidePat, func: func, isAnonymous: isAnonymous,numberOfRides:numberOfRides,repeatRideEvery: repeatRide}),
                 success: function (data) {
                     swal({
                         title: "ההסעה נמחקה",
