changing directions in anonymous ride

--- a/Road to Recovery/pages/anonymousPatientForm.html
+++ b/Road to Recovery/pages/anonymousPatientForm.html
@@ -82,6 +82,9 @@
         input[type=text]:focus {
             background-color: #FFE684;
         }
+        input[type=text], input[type=checkbox], input[type=date],#escort,#barrier,#hospital {
+            border-color: #000
+        }
     </style>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!--City Autocomplete-->
@@ -483,7 +486,7 @@
                                 </div>
                                 <div>
                                     <div class="text-right m-t-30 row">
-                                        <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>זמירה</button>
+                                        <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמירה</button>
                                     </div>
                                 </div>
                                 <hr />
