--- a/Road to Recovery/pages/volunteerForm.html
+++ b/Road to Recovery/pages/volunteerForm.html
@@ -65,6 +65,9 @@
         input[type=text]:focus {
             background-color: #FFE684;
         }
+        input[type=text], input[type=checkbox], input[type=date], #typeVolunteer ,#gender{
+            border-color: #000
+        }
     </style>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!--City Autocomplete-->
@@ -582,7 +585,7 @@
                                         <!--<table id="jqGrid" class="table table-striped table-bordered text-right"></table>-->
                                         <!--<div id="jqGridPager"></div>-->
                                         <div class="text-right m-t-30 row">
-                                            <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמור</button>
+                                            <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמירה</button>
                                         </div>
                                     </div>
                                 </div>
