--- a/Road to Recovery/pages/locationForm.html
+++ b/Road to Recovery/pages/locationForm.html
@@ -62,6 +62,9 @@
         input[type=text]:focus {
             background-color: #FFE684;
         }
+        input[type=text], input[type=checkbox], input[type=date], #area, #type {
+            border-color: #000
+        }
     </style>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!--City Autocomplete-->
